--- a/Pages/UpdateMembershipStatus.razor
+++ b/Pages/UpdateMembershipStatus.razor
@@ -2,6 +2,44 @@
 @inject NavigationManager NavigationManager
 @using Cw.Data
 
+<style>
+    form-group {
+            margin-bottom: 1rem;
+        }
+    
+        .form-control {
+            display: block;
+            width: 100%;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: #495057;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ced4da;
+            border-radius: .25rem;
+            transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        }
+    
+        .btn-primary {
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+    
+        .btn-secondary {
+            color: #fff;
+            background-color: #6c757d;
+            border-color: #6c757d;
+        }
+    
+        .alert-success {
+            color: #155724;
+            background-color: #d4edda;
+            border-color: #c3e6cb;
+        }
+    </style>
+
 <h3>Update Member Status</h3>
 
 @if (!isPhoneNumberEntered)
