--- a/Pages/Order.razor
+++ b/Pages/Order.razor
@@ -7,9 +7,7 @@
 @using iText.Layout.Element
 @inject NavigationManager NavigationManager
 
-<style>
-    
-</style>
+<style></style>
 <h3 class="order-coffee">Order Coffee</h3>
  <style>
     body {
